# chat_app

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs
src/ui/: client-ui.slint  main.slint  server-ui.slint
