[package]
name = "chat_app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
iroh = "1.0.0"
iroh-ping = "1.0.0"
iroh-tickets = "1.0.0"
postcard = "1.1.3"
rand = "0.10.1"
serde = "1.0.228"
slint = "1.16.1"
sqlite = "0.37.0"
tokio = {version = "1.52.3", features = ["full"]}
tracing-subscriber = "0.3.23"

[build-dependencies]
slint-build = "1.16.1"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"
